--- a/package.json
+++ b/package.json
@@ -10,13 +10,9 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "pre-commit": "lint-staged",
-    "pretty": "pretty-quick "
+    "precommit": "pretty-quick --staged"
   },
-  "pre-commit": ["pre-commit"],
-  "lint-staged": {
-    "*.{ts,js,json,css,md}": ["prettier --write", "git add"]
-  },
+  "precommit": ["precommit"],
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.8",
@@ -39,7 +35,6 @@
     "core-js": "^2.5.3",
     "express": "^4.16.3",
     "hammerjs": "^2.0.8",
-    "lint-staged": "^7.0.0",
     "ngrx-data": "^1.0.0-alpha.17",
     "rxjs": "^5.5.7",
     "zone.js": "^0.8.20"
