--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "pretty-quick": "pretty-quick",
     "precommit": "pretty-quick --staged"
   },
-  "precommit": ["precommit"],
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.8",
@@ -49,6 +49,7 @@
     "angular2-template-loader": "^0.6.2",
     "codelyzer": "^4.0.1",
     "electron": "^1.8.3",
+    "husky": "^0.14.3",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
@@ -56,7 +57,6 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "pre-commit": "^1.2.2",
     "prettier": "^1.11.1",
     "pretty-quick": "^1.4.1",
     "protractor": "~5.1.2",
